--- a/EmpInfo/Views/Others/DSIndex.cshtml
+++ b/EmpInfo/Views/Others/DSIndex.cshtml
@@ -289,7 +289,7 @@
             });
 
             //上传模块
-            $("<div></div>").myUploader({
+            $("<div></div>").myUploaderSim({
                 server: '../File/BeginUploadDSImg',
                 pick: "#tb2AddPicBt",
                 duplicate: true, //可重复上传图片
