--- a/EmpInfo/Views/Report/PrintFX.cshtml
+++ b/EmpInfo/Views/Report/PrintFX.cshtml
@@ -65,6 +65,10 @@
             </td>
         </tr>
         <tr>
+            <td>业务类型:</td>
+            <td colspan="3">@h.fx_type_name</td>
+        </tr>
+        <tr>
             <td style="width:20%;">公司:</td>
             <td style="width:30%;">@h.company</td>
             <td style="width:20%;">部门:</td>
