--- a/EmpInfo/Views/Apply/BeginApplyXA.cshtml
+++ b/EmpInfo/Views/Apply/BeginApplyXA.cshtml
@@ -35,7 +35,8 @@
                 { name: "车间装修类", detail: "车间装修类：如 墙体 / 地板 / 天花板 / 管道 等各类新增或修补 等" },
                 { name: "车间整改类", detail: "车间整改类：如 净房相关改造 / 图纸布局更改 / 土建基建相关 等" },
                 //{ name: "消防及环保工程类", detail: "消防及环保工程类：如 消防相关 / 废水废气相关 / 污染废弃物处理相关 等" },
-                { name: "涉及厂区其余公共区域类", detail: "涉及厂区其余公共区域类：如 公共区域的外观、设施、绿化的维护，增补 等" }
+                { name: "涉及厂区其余公共区域类", detail: "涉及厂区其余公共区域类：如 公共区域的外观、设施、绿化的维护，增补 等" },
+                { name: "基建相关", detail: "如 土建施工/图纸设计/承重加固/勘测钻探 等" }
             ];
             arr["工作项目"] = [
                 { name: "设备搬运/二次配", detail: "设备搬运/二次配类：设备搬运 / 打包 / 拆装 / 运输 / 一次配水电气 / 二次配水电气 等" },
@@ -146,6 +147,15 @@
                     }
                 });
             });
+            
+            $("#done_before_apply").on("change", function () {
+                if ($(this).val() == "是") {
+                    $("#done_applier_div").show();
+                } else {
+                    $("#done_applier_div").hide();
+                }
+            });
+            $("#done_before_apply").trigger("change");
 
             //提交申请
             $("#apply_bt").on("click", function () {
@@ -332,6 +342,27 @@
             </div>
             <div class="b-div">
                 <span class="b-label">
+                    先施工后补单:
+                </span>
+                <div class="b-input">
+                    <select class="form-control" name="done_before_apply" id="done_before_apply" required>
+                        <option value="">----下拉选择是或否----</option>
+                        <option value="否" selected>否</option>
+                        <option value="是">是</option>
+                    </select>
+                    <div class="small text-danger"><i class="fa fa-info-circle"></i> 注意：如选是，需先经审核部同意</div>
+                </div>
+            </div>
+            <div class="b-div" id="done_applier_div">
+                <span class="b-label">
+                    已施工供应商:
+                </span>
+                <span class="b-input">
+                    <input type="text" class="form-control" name="has_done_supplier" placeholder="填写供应商名称" />
+                </span>
+            </div>
+            <div class="b-div">
+                <span class="b-label">
                     申请原因:
                 </span>
                 <span class="b-input">
@@ -353,7 +384,7 @@
                 </span>
                 <div class="b-input">
                     <select class="form-control" name="is_share_fee" id="is_share_fee" required>
-                        <option value="">----下拉选择是否是否多部门分摊----</option>
+                        <option value="">----下拉选择是否多部门分摊----</option>
                         <option value="false">否</option>
                         <option value="true">是</option>
                     </select>
@@ -466,7 +497,7 @@
             <p>
                 1. 流程步骤：流程开始--->提交申请--->收益提供人审批(如没有可跳过)--->设备科负责人审批--->生产部主管审批--->部门总经理审批--->
                 项目初审--->采购部接单--->申请人上传施工清单--->设备科负责人处理--->项目类别负责人(监控类/网络类)--->节省与监督--->采购部上传报价单--->
-                管理部会签（项目大类负责人、申请部门总经理、分摊部门总经理）--->审核部最终确认--->申请人验收项目--->设备负责人验收--->
+                管理部会签（项目大类负责人、申请部门总经理、分摊部门总经理）--->审核部最终确认--->采购填写PO--->申请人验收项目--->设备负责人验收--->
                 生产主管验收--->部门总经理验收--->信息管理部验收（网络类）--->项目大类负责人验收--->流程结束。
                 <br/>
                 2. 审核部要求：2021-08-25之后提交的项目单申请，不需走验收部分审批流程，改回走纸质验收。
@@ -475,7 +506,9 @@
                 <br/>
                 4. 申请人上传施工清单，设备科负责人处理后，采购部上传报价单前，系统会推送通知给项目大类负责人。
                 <br/>
-                5. 审核部最终确认后，申请人验收项目前，系统会推送通知给采购部接单员。
+                5. 2021-10-12，新增先施工后补单选项，如果选是，走此精简流程：流程开始--->提交申请--->部门总经理审批---> 
+                采购部接单--->申请人上传施工清单--->设备科负责人处理--->项目类别负责人(监控类/网络类)--->采购部上传报价单---> 
+                管理部会签（项目大类负责人、申请部门总经理、分摊部门总经理）--->审核部最终确认 --->采购填写PO--->流程结束。
                 <br/>
                 6. 如对此业务流程有疑问，或需要增加部门，请联系审核部陈禹健（chenyujian@trulyopto.cn）或陈俊翰（chenjunhan@trulyopto.cn）。
             </p>
