--- a/EmpInfo/Views/WX/DormRepairOutside.cshtml
+++ b/EmpInfo/Views/WX/DormRepairOutside.cshtml
@@ -61,7 +61,7 @@
 
         function DormRepairModel() {
             var self = this;
-            self.areaNames = ["一区", "二区", "六区"];
+            self.areaNames = ["一区", "二区", "六区", "红草一区"];
             self.areaName = ko.observable("");
             self.dormNumber = ko.observable("");
             self.phoneNumber = ko.observable("");
