--- a/EmpInfo/Views/Account/Login.cshtml
+++ b/EmpInfo/Views/Account/Login.cshtml
@@ -397,7 +397,7 @@
                     <i class="fa fa-android"></i> 安卓APP版本：<a href="@ViewData["appUrl"]" target="_blank">点此下载</a>
                 </p>*@
                 <p class="text-danger small">
-                    <i class="fa fa-info-circle"></i> 关注并绑定[信利e家]微信公众号后，可在微信端免密登陆此系统
+                    <i class="fa fa-info-circle"></i> 网页端登陆地址：（外网）http://emp.truly.com.cn/emp ,（内网）http://192.168.90.100/emp
                 </p>
             </div>
         </div>
