--- a/EmpInfo/Views/Apply/BeginAuditFXApply.cshtml
+++ b/EmpInfo/Views/Apply/BeginAuditFXApply.cshtml
@@ -6,11 +6,14 @@
 @section CSS{
     <link rel="stylesheet" href="@Url.Content("~/Content/webupload/webuploader.css")" />
     <link rel="stylesheet" href="@Url.Content("~/Content/bootstrap-table/bootstrap-table.min.css")" />
+    <link rel="stylesheet" href="@Url.Content("~/Content/bootstrap-datetimepicker.min.css")" />
     }
 
 @section Scripts {
     <script src="@Url.Content("~/Scripts/webuploader.min.js")"></script>
     <script src="@Url.Content("~/Scripts/myUploaderPro.js?v=2")"></script>
+    <script src="@Url.Content("~/Scripts/bootstrap-datetimepicker.min.js")"></script>
+    <script src="@Url.Content("~/Scripts/bootstrap-datetimepicker.zh-CN.js")"></script>
     <script>
 
         $(function () {
@@ -18,6 +21,15 @@
                 $($("#applyContent .panel-heading")[0]).html("<i class='fa fa-list'></i> @bam.billTypeName 详情");
                 $("#waiting").remove();
                 $(".auditContent").css("visibility", "visible");                
+            });
+
+            $(".datePicker").datetimepicker({
+                language: 'zh-CN',
+                format: "yyyy-mm-dd",
+                autoclose: true,
+                startView: 2,
+                minView: 2,
+                endDate:"@DateTime.Now.ToString("yyyy-MM-dd")"
             });
 
             if ($("#myUploader1").length > 0) {
@@ -214,7 +226,7 @@
 <div class="auditContent">
     <div class="panel panel-primary">
         <div class="panel-heading" id="auditHead">
-            <i class='fa fa-pencil'></i> 开始审批
+            <i class='fa fa-pencil'></i> @bam.stepName
         </div>
         <div class="panel-body">
             @if (bam.isPass == null) {
@@ -301,18 +313,51 @@
                             </span>
                         </div>
                     }
+                    @if (bam.stepName.Contains("返厂登记")) {
+                        <div class="b-div">
+                            <span class="b-label">
+                                返厂时间:
+                            </span>
+                            <div class="b-input">
+                                <div class="form-group" style="margin:0;">
+                                    <div class="input-group date datePicker" id="datePicker2">
+                                        <span class="input-group-addon"><i class="fa fa-calendar"></i> </span>
+                                        <input class="form-control" type="text" name="back_time" autocomplete="off" required />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="b-div">
+                            <span class="b-label">
+                                物品状态:
+                            </span>
+                            <span class="b-input">
+                                <select class="form-control" name="back_status" required>
+                                    <option value="">---- 下拉选择物品状态 ----</option>
+                                    <option value="正常">正常</option>
+                                    <option value="损坏">损坏</option>
+                                </select>
+                            </span>
+                        </div>
+                    }
                     <textarea class="form-control" rows="2" name="opinion" id="opinion" placeholder="请在此处输入审核意见"></textarea>
                     
                 </form>
                 <div style="margin-top:12px;"></div>
-                <div class="btn-group btn-group-justified" role="group">                        
-                    <div class="btn-group" role="group">
-                        <button type="button" class="btn btn-danger" onclick="audit(false)">拒绝</button>
-                    </div>                        
-                    <div class="btn-group" role="group">
-                        <button type="button" class="btn btn-success" onclick="audit(true)">同意</button>
+
+                if (bam.stepName.Contains("返厂")) {
+                    <button type="button" class="btn btn-block btn-success" onclick="audit(true)">同意</button>
+                }
+                else {
+                    <div class="btn-group btn-group-justified" role="group">                        
+                        <div class="btn-group" role="group">
+                            <button type="button" class="btn btn-danger" onclick="audit(false)">拒绝</button>
+                        </div>                        
+                        <div class="btn-group" role="group">
+                            <button type="button" class="btn btn-success" onclick="audit(true)">同意</button>
+                        </div>
                     </div>
-                </div>
+                }
             }
             else {
                 <div style="margin-top:12px;"></div>
