--- a/EmpInfo/Views/ApplyExtra/CheckMTEqInfo.cshtml
+++ b/EmpInfo/Views/ApplyExtra/CheckMTEqInfo.cshtml
@@ -7,7 +7,7 @@
     <script src="@Url.Content("~/Content/bootstrap-table/locale/bootstrap-table-zh-CN.min.js")"></script>
     <script>
         $("#tb1").bootstrapTable({
-            url: "CheckMyMTEqInfo",
+            //url: "CheckMyMTEqInfo",
             striped: true,
             mobileResponsive: true,
             pagination: true,
@@ -138,6 +138,32 @@
         });
 
     </script>
+    <script>
+        $(function () {
+            $("#reportBt").on("click", function () {               
+                toastr.info("数据正在导出，请稍等...");
+                window.open("../Report/ExportMyMTEqInfo?className=" + $("#className").val()
+                    + "&eqName="+$("#eqName").val()
+                    + "&fileNo=" + $("#fileNo").val()
+                    );
+            });
+
+            $("#checkBt").on("click", function () {
+                $.post("CheckMyMTEqInfo", {
+                    className: $("#className").val(),
+                    eqName: $("#eqName").val(),
+                    fileNo: $("#fileNo").val()
+                }, function (data) {
+                    $('#tb1').bootstrapTable('load', data);
+                    if (data.length == 0) {
+                        toastr.error("查无符合条件的设备");
+                    } else {
+                        toastr.success("成功加载记录数：" + data.length);
+                    }
+                });
+            });
+        });
+    </script>
 }
 
 <div class="panel panel-success">
@@ -150,15 +176,39 @@
             <li class="active">设备信息维护</li>
         </ol>
     </div>
-    <div class="panel-body">        
-        <div>
+    <div class="panel-body">
+
+        <div class="row" style="margin-bottom:6px;">                
+            <div class="col-xs-12 col-sm-6 col-md-4">
+                <div class="lbText">科室名称：</div>
+                <input type="text" class="form-control" id="className" placeholder="输入科室名称搜索" style="margin:6px 0;" />
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+                <div class="lbText">设备名称：</div>
+                <input type="text" class="form-control" id="eqName" placeholder="输入设备名称搜索" style="margin:6px 0;" />
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+                <div class="lbText">文件编号：</div>
+                <input type="text" class="form-control" id="fileNo" placeholder="输入保养文件编号搜索" style="margin:6px 0;" />
+            </div>
+        </div>
+        <div class="btn-group btn-group-justified" role="group" style="margin-bottom:20px;margin-top:4px;">
+            <div class="btn-group" role="group">
+                <button class="btn btn-primary" id="checkBt" data-loading-text="搜索中..."><i class="fa fa-search"></i> 搜索</button>
+            </div>
+            <div class="btn-group" role="group">
+                <button class="btn btn-success" id="reportBt" data-loading-text="导出中..."><i class="fa fa-file-excel-o"></i> 导出报表</button>
+            </div>
+        </div>
+
+        <div style="margin-top:16px;">
             <button class="btn btn-success" id="tb1AddBt"><i class="fa fa-plus"></i> 新增</button>
             <button class="btn btn-primary" id="tb1ModifyBt"><i class="fa fa-edit"></i> 修改</button>
             <button class="btn btn-danger" id="tb1RemoveBt"><i class="fa fa-plus"></i> 删除</button>
             <button class="btn btn-info" id="tb1ApplyRecordBt"><i class="fa fa-files-o"></i> 保养记录</button>
         </div>
 
-        <table id="tb1"></table>                    
+        <table id="tb1"></table>
     </div>
 </div>
 @section Modal{
