--- a/EmpInfo/Views/Report/XASummary.cshtml
+++ b/EmpInfo/Views/Report/XASummary.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @section CSS{
     <style type="text/css">
-        .depName{
+        .depName,.supplierName{
             cursor:pointer;
         }
     </style>
@@ -10,7 +10,14 @@
 <script>
     $(function () {
         $("#searchReportBt").on("click", function () {
-            $.post("SearchXASummary", { year: $("#yearSt").val(), month: $("#monthSt").val(),isPO: $("#isPO").val() }, function (data) {
+            var groupName = $("#groupName").val();
+            var className = "";
+            if (groupName == "生产部") {
+                className = "depName";
+            } else if (groupName == "供应商") {
+                className = "supplierName";
+            }
+            $.post("SearchXASummary", { year: $("#yearSt").val(), month: $("#monthSt").val(), isPO: $("#isPO").val(), groupName: groupName }, function (data) {
                 if (data.length < 1) {
                     toastr.error("此时间段查不到已审核的项目单费用");
                     return;
@@ -26,7 +33,7 @@
                         html += "<tr>";
                     }
 
-                    html += "<td style='width:30%;'><span class='depName'>" + data[i].name + "</span></td><td style='width:20%;'><b class='text-primary'>" + parseDecimal(data[i].value) + "</b></td>";
+                    html += "<td style='width:30%;'><span class='"+className+"'>" + data[i].name + "</span></td><td style='width:20%;'><b class='text-primary'>" + parseDecimal(data[i].value) + "</b></td>";
 
                     if (i % 2 == 1 || isSmallScreen) {
                         html += "</tr>";
@@ -46,8 +53,12 @@
         });
 
         $("#tb").on("click", ".depName", function () {
-            window.open("CheckXASummaryDetail?year=" + $("#yearSt").val() + "&month=" + $("#monthSt").val() + "&isPO=" + $("#isPO").val() + "&depName=" + $(this).html());
-        })
+            window.open("CheckXASummaryDetailByDepName?year=" + $("#yearSt").val() + "&month=" + $("#monthSt").val() + "&isPO=" + $("#isPO").val() + "&depName=" + $(this).html());
+        });
+
+        $("#tb").on("click", ".supplierName", function () {
+            window.open("CheckXASummaryDetailBySupplierName?year=" + $("#yearSt").val() + "&month=" + $("#monthSt").val() + "&isPO=" + $("#isPO").val() + "&supplierName=" + $(this).html());
+        });
 
     })
 
@@ -101,6 +112,13 @@
                         <option value="@i.ToString("00")">@i.ToString("00")</option>
                     }
                     <option value="整年">整年</option>
+                </select>
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-3" style="margin-bottom:12px;">
+                统计维度：
+                <select class="form-control" id="groupName" style="width:120px;display:inline-block;">   
+                    <option value="生产部">生产部</option>                 
+                    <option value="供应商">供应商</option>
                 </select>
             </div>
             <div class="col-xs-12 col-sm-4 col-md-3" style="margin-bottom:12px;">
